--- a/Ranges.java.1
+++ b/Ranges.java.1
@@ -1,5 +1,3 @@
-
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.ListIterator;
@@ -7,13 +5,9 @@ import java.util.ListIterator;
 /**
  * An ordered sequence of disjoint (non-overlapping) intervals.   
  */
-public class Ranges extends edu.odu.cs.cs350.unitTesting.UnitTestTracker implements Iterable<Interval> {
+public class Ranges implements Iterable<Interval> {
 
-  private static String[] mutatorNames = {"remove"};
-  private static String[] accessorNames = {"sum", "iterator"};
-  
-
-  private LinkedList<Interval> remaining;
+  LinkedList<Interval> remaining;
 
   /**
    * Create a range with no gaps.
@@ -21,9 +15,7 @@ public class Ranges extends edu.odu.cs.cs350.unitTesting.UnitTestTracker impleme
    * @param low
    * @param high
    */
-  public Ranges(double low, double high) {
-    super(Ranges.class, Arrays.asList(mutatorNames), Arrays.asList(accessorNames));
-    mutate();
+  Ranges(double low, double high) {
     remaining = new LinkedList<>();
     remaining.add(new Interval(low, high));
   }
@@ -35,8 +27,7 @@ public class Ranges extends edu.odu.cs.cs350.unitTesting.UnitTestTracker impleme
    * 
    * @param toRemove the range of numbers to subtract
    */
-  public void remove(Interval toRemove) {
-    mutate();
+  public void subtract(Interval toRemove) {
     if (toRemove.width() == 0.0) {
       return;
     }
@@ -65,7 +56,6 @@ public class Ranges extends edu.odu.cs.cs350.unitTesting.UnitTestTracker impleme
    * @return the sum
    */
   public double sum() {
-    access();
     double total = 0.0;
     for (Interval interval : remaining) {
       total += interval.width();
@@ -88,7 +78,6 @@ public class Ranges extends edu.odu.cs.cs350.unitTesting.UnitTestTracker impleme
    * @return an iterator for the remaining intervals
    */
   public Iterator<Interval> iterator() {
-    access();
     return remaining.iterator();
   }
 
