--- a/Ranges.java.3
+++ b/Ranges.java.3
@@ -29,6 +29,9 @@ public class Ranges implements Iterable<Interval> {
    * @param toRemove the range of numbers to subtract
    */
   public void remove(Interval toRemove) {
+    if (toRemove.width() == 0.0) {
+      return;
+    }
     ListIterator<Interval> iter = remaining.listIterator();
     while (iter.hasNext()) {
       Interval current = iter.next();
@@ -40,7 +43,7 @@ public class Ranges implements Iterable<Interval> {
         iter.remove();
         if (lowerPart.width() > 0.0) {
           iter.add(lowerPart);
-        }
+        } else
         if (upperPart.width() > 0.0) {
           iter.add(upperPart);
         }
