--- a/Ranges.java.4
+++ b/Ranges.java.4
@@ -1,3 +1,4 @@
+
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.ListIterator;
@@ -27,10 +28,7 @@ public class Ranges implements Iterable<Interval> {
    * 
    * @param toRemove the range of numbers to subtract
    */
-  public void subtract(Interval toRemove) {
-    if (toRemove.width() == 0.0) {
-      return;
-    }
+  public void remove(Interval toRemove) {
     ListIterator<Interval> iter = remaining.listIterator();
     while (iter.hasNext()) {
       Interval current = iter.next();
